--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#3D5069"
+        android:startColor="#d75f86ba"
         android:centerColor="#2A3c58"
         android:endColor="#192943"
         android:angle="0"/>
