--- a/app/src/main/res/layout/activity_fees2.xml
+++ b/app/src/main/res/layout/activity_fees2.xml
@@ -4,110 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fees2"
     tools:context="com.fdo.prasanga.studentmanagementsystem.Fees2Activity"
     tools:layout_editor_absoluteY="81dp">
 
+
+    <View
+        android:id="@+id/opacityFilter"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:alpha="0.3"
+        android:background="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </View>
 
     <TextView
         android:id="@+id/tv_CurrentDate"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
-        android:layout_marginBottom="132dp"
-        android:layout_marginTop="131dp"
+        android:layout_marginBottom="56dp"
+        android:layout_marginTop="61dp"
         android:text="TextView"
+        android:textColor="#fff"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/dtp_Calendar"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_Fee"
         app:layout_constraintStart_toStartOf="@+id/tv_Fee"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/tv_grade" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
         android:text="Current Date: "
+        android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_CurrentDate"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="26dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="29dp"
         android:text="Select Next Payment Date"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dtp_Calendar"
         app:layout_constraintEnd_toEndOf="@+id/tv_Fee"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/btn_completePaytment"
-        android:layout_width="0dp"
+        android:layout_width="198dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginTop="18dp"
         android:text="Complete Payment"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_generateInvoice" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="93dp"
         android:text="Grade: "
+        android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
         android:text="TextView"
+        android:textColor="#fff"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_CurrentDate"
-        app:layout_constraintStart_toStartOf="@+id/tv_studentID" />
+        app:layout_constraintStart_toStartOf="@+id/tv_studentID"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="41dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginStart="42dp"
         android:text="Calculated Fee:"
+        android:textColor="#fff"
         android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Fee"
         app:layout_constraintEnd_toStartOf="@+id/tv_Fee"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_Fee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="90dp"
         android:text="TextView"
+        android:textColor="#fff"
         android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/textView2" />
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/tv_grade" />
 
     <TextView
         android:id="@+id/tv_studentID"
         android:layout_width="0dp"
-        android:layout_height="28dp"
-        android:layout_marginBottom="52dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="51dp"
         android:layout_marginEnd="97dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="39dp"
         android:ems="10"
         android:inputType="number"
+        android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_grade"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,51 +138,52 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="39dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginStart="78dp"
         android:text="Student ID: "
+        android:textColor="#fff"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_studentID"
         app:layout_constraintEnd_toStartOf="@+id/tv_studentID"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/tv_studentID" />
 
     <DatePicker
         android:id="@+id/dtp_Calendar"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="13dp"
+        android:layout_height="144dp"
+        android:layout_marginBottom="153dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="152dp"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
-        app:layout_constraintBottom_toTopOf="@+id/btn_generateInvoice"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="59dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginEnd="61dp"
         android:text="LKR"
+        android:textColor="#fff"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_CurrentDate" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Fee"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_generateInvoice"
-        android:layout_width="wrap_content"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginTop="5dp"
         android:text="Generate Invoice"
-        app:layout_constraintBottom_toTopOf="@+id/btn_completePaytment"
-        app:layout_constraintEnd_toEndOf="@+id/btn_completePaytment" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dtp_Calendar" />
 
 
 </android.support.constraint.ConstraintLayout>
