--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
+    android:background="@drawable/login1"
     tools:context="com.fdo.prasanga.studentmanagementsystem.LoginActivity">
 
 
@@ -64,113 +64,80 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/editText"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
-        android:layout_marginTop="59dp"
+        android:layout_above="@+id/et_login_Usrename"
+        android:layout_alignEnd="@+id/et_login_Usrename"
+        android:layout_alignRight="@+id/et_login_Usrename"
+        android:layout_marginBottom="43dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="43dp"
         app:srcCompat="@drawable/abc" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/et_login_Usrename"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:background="#11000000"
-
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
         android:textSize="16dp"
         android:layout_marginBottom="35dp"
-        android:layout_above="@+id/editText2"
+        android:layout_above="@+id/et_login_Password"
         android:layout_centerHorizontal="true"
-        android:textColorHint="#eee"/>
+        android:textColorHint="#eee"
+        android:textColor="#fff"/>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/et_login_Password"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/cardView"
-
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignLeft="@+id/et_login_Usrename"
+        android:layout_alignStart="@+id/et_login_Usrename"
         android:layout_marginBottom="100dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColorHint="#eee"/>
+        android:textColorHint="#eee"
+        android:textColor="#fff"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/textView2"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
+        android:layout_marginBottom="60dp"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp">
 
-        <RelativeLayout
-            android:id="@+id/cv"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:clickable="true"
-
-                android:gravity="center"
-                android:text="Login"
-                android:textColor="#fff"
-                android:textSize="18sp" />
-        </RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="9dp"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="Login"
+            android:textColor="#fff"
+            android:textSize="18sp" />
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/textView2"
+    <RelativeLayout
+        android:id="@+id/cv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register Here."
-        android:layout_above="@+id/linearLayout"
+        android:layout_above="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="6dp" />
+        android:layout_marginBottom="48dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:id="@+id/linearLayout">
+    </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/twitter" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            app:srcCompat="@drawable/instagram" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            app:srcCompat="@drawable/facebook" />
-    </LinearLayout>
 
 </RelativeLayout>
