--- a/app/src/main/res/layout/activity_unpaid_student_info.xml
+++ b/app/src/main/res/layout/activity_unpaid_student_info.xml
@@ -4,28 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/info"
     tools:context="com.fdo.prasanga.studentmanagementsystem.UnpaidStudentInfoActivity"
     tools:layout_editor_absoluteY="81dp">
 
+    <View
+        android:id="@+id/opacityFilter"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:alpha="0.4"
+        android:background="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </View>
     <TextView
         android:id="@+id/tv_up_Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="29dp"
-        android:layout_marginTop="127dp"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginTop="121dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="7dp"
         android:text="Name: "
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_up_Name"
+        app:layout_constraintEnd_toStartOf="@+id/tv_up_Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_up_Name" />
 
@@ -33,65 +49,76 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="48dp"
         android:text="Address: "
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_up_Address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_up_Name" />
 
     <TextView
         android:id="@+id/tv_up_Address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="29dp"
-        android:layout_marginTop="59dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="22dp"
         android:text="TextView"
         android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_up_Name" />
+        app:layout_constraintStart_toEndOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="43dp"
         android:text="Grade: "
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_up_grade"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Parent's Contact Number: "
-        android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_up_p_Num"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_up_grade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginTop="55dp"
-        android:text="TextView"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_up_Address" />
 
     <TextView
-        android:id="@+id/tv_up_p_Num"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView9"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="190dp"
+        android:layout_marginBottom="169dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="170dp"
+        android:gravity="right"
+        android:text="Parent's Contact  Number: "
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_up_p_Num"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_up_Address" />
+
+    <TextView
+        android:id="@+id/tv_up_grade"
+        android:layout_width="0dp"
+        android:layout_height="29dp"
         android:layout_marginEnd="36dp"
         android:text="TextView"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/tv_up_p_Num"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="35dp"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toTopOf="@+id/textView9" />
 
 </android.support.constraint.ConstraintLayout>
